force-app/main/default/objects/Reservation__c/Reservation__c.object-meta.xml
<CustomObject>
    <label>Reservation</label>
    <nameField>
        <label>Reservation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>