force-app/main/default/objects/Reservation__c/fields/ArrivalDate__c.field-meta.xml
<CustomField>
    <fullName>ArrivalDate__c</fullName>
    <label>ArrivalDate</label>
    <type>Date</type>
</CustomField>