force-app/main/default/objects/Reservation__c/fields/DepartureDate__c.field-meta.xml
<CustomField>
    <fullName>DepartureDate__c</fullName>
    <label>DepartureDate</label>
    <type>Date</type>
</CustomField>