force-app/main/default/objects/Reservation__c/fields/NumberOfGuest__c.field-meta.xml
<CustomField>
    <fullName>NumberOfGuest__c</fullName>
    <label>NumberOfGuest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>